--- a/packages/forms-web/src/pages/form-page/components/drag-text-input/drag-text-input.scss
+++ b/packages/forms-web/src/pages/form-page/components/drag-text-input/drag-text-input.scss
@@ -1,5 +1,4 @@
 @import '../../../../index';
-//@import '../../assets/Icon_Arrow.svg';
 
 .fa-field-menu {
     background-color: $fa-color-gray-light;
@@ -18,13 +17,13 @@
         margin: 0 4px;
         width: 30px;
         height: 30px;
+        fill: $fa-color-white-primary;
     }
 
     &__h1 {
         padding-left: 20px;
         font-size: 1.125rem;
         max-width: 67rem;
-        color: $fa-color-white-primary;
     }
 }
 
@@ -35,13 +34,14 @@
     width: 100%;
     text-align: center;
     padding-left: 40px;
+    margin-bottom: 15px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     position: relative;
     text-decoration: none;
-    background-color: $fa-color-black;
-    color: $fa-color-white-primary;
+    color: $fa-color-black;
+    background-color: transparent;
     text-transform: capitalize;
     overflow: hidden;
     cursor: move;
@@ -49,30 +49,35 @@
 
 .btn-effect {
     transition: all 0.2s linear 0s;
-
+    
     &:before {
-        content: url("../../../../assets/Icon_Arrow.svg");
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: absolute;
-        top: 0;
-        left: 0px;
-        height: 100%;
-        width: 30px;
-        background-color: $fa-color-cyan-primary;
-        border-radius: 0 50% 50% 0;
-        transform: scale(0, 1);
-        transform-origin: left center;
-        transition: all 0.2s linear 0s;
+      content: url("../../../../assets/Icon_Arrow.svg");
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 0;
+      right: 50px;
+      width: 50px;
+      height: 100%;
+      border-radius: 50% 0 0 50%;
+      transform: scale(0, 1);
+      transition: all 0.3s linear 0s;
+      transform-origin: right center;
+      text-align: center;
+      transition: all 0.2s linear 0.1s;
     }
-
+    
     &:hover {
+      text-indent: 0px;
+      background-color: $fa-color-blue-dark;
+      color: $fa-color-white-primary;
+      fill: $fa-color-white-primary;
+      
+      &:before {
+        transform: scale(0.8, 1);
+        right: 0;
         text-indent: 0px;
-
-        &:before {
-            transform: scale(0.8, 1);
-            text-indent: 0;
-        }
+      }
     }
-}
+  }
