--- a/packages/forms-web/src/index.scss
+++ b/packages/forms-web/src/index.scss
@@ -11,7 +11,7 @@ $ml-color-white-primary: #fff;
 // definidos para Forms App
 $fa-color-cyan-primary: #0dd4c4;
 $fa-color-blue-dark: #38304D;
-$fa-color-gray-light: #999999;
+$fa-color-gray-light: #615E67;
 $fa-color-gray-lighter: #EEEEEE;
 $fa-color-white-primary: #fff;
 $fa-color-green-dark: #175127;
