--- a/packages/forms-web/src/pages/form-page/components/fields-menu/drag-text-input/drag-text-input.scss
+++ b/packages/forms-web/src/pages/form-page/components/fields-menu/drag-text-input/drag-text-input.scss
@@ -1,4 +1,4 @@
-@import '../../../../index';
+@import '../../../../../index';
 
 .fa-field-menu {
     background-color: $fa-color-gray-light;
@@ -30,11 +30,12 @@
 .button {
     border-radius: 20px;
     border: 0;
-    height: 60px;
-    width: 100%;
+    height: 50px;
+    width: 240px;
     text-align: center;
-    padding-left: 40px;
-    margin-bottom: 15px;
+    padding-left: 20px;
+    margin-left: 40px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -51,7 +52,7 @@
     transition: all 0.2s linear 0s;
     
     &:before {
-      content: url("../../../../assets/Icon_Arrow.svg");
+      content: url("../../../../../assets/Icon_Arrow.svg");
       display: flex;
       align-items: center;
       justify-content: center;
