--- a/packages/forms-web/src/pages/form-page/components/fields-menu/fields-menu.scss
+++ b/packages/forms-web/src/pages/form-page/components/fields-menu/fields-menu.scss
@@ -3,8 +3,9 @@
 .fa-field-menu {
     background-color: $fa-color-gray-light;
     text-align: center;
-    width: 280px;
-    height: 100vh;
+    width: 300px;
+    height: 100%;
+    padding-bottom: 20px;
 
     &__logo {
         vertical-align: bottom;
