--- a/packages/forms-web/src/pages/design-form/components/fields-menu/components/form-title/form-title.scss
+++ b/packages/forms-web/src/pages/design-form/components/fields-menu/components/form-title/form-title.scss
@@ -1,4 +1,4 @@
-@import '../../../../../index';
+@import '../../../../../../index';
 
 .form-title {
     color: $fa-color-white-primary;
@@ -13,5 +13,5 @@
     &__icon {
         width: 20px;
         padding-right: 10px;
-    } 
+    }
 }
