Fields SlideMenu design

--- a/packages/forms-web/src/index.scss
+++ b/packages/forms-web/src/index.scss
@@ -12,7 +12,7 @@ $ml-color-white-primary: #fff;
 $fa-color-cyan-primary: #0dd4c4;
 $fa-color-blue-dark: #38304D;
 $fa-color-gray-light: #615E67;
-$fa-color-gray-lighter: #EEEEEE;
+$fa-color-gray-lighter: #9b9292c1;
 $fa-color-white-primary: #fff;
 $fa-color-green-dark: #175127;
 $fa-color-orange-dark: #c7720e;
@@ -20,11 +20,11 @@ $fa-color-red-dark: #551221;
 $fa-color-black: #282828;
 
 body {
-  margin: 0;
+  background-color: $ml-color-gray-Lighter;
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $ml-color-gray-Lighter;
+  margin: 0;
 }
 
 code {
