--- a/packages/forms-web/src/pages/design-form/components/fields-menu/components/drag-input/drag-input.scss
+++ b/packages/forms-web/src/pages/design-form/components/fields-menu/components/drag-input/drag-input.scss
@@ -1,57 +1,62 @@
 @import '../../../../../../index';
 
-.button {
-    border-radius: 20px;
-    border: 0;
-    height: 50px;
-    width: 240px;
-    text-align: center;
-    padding-left: 20px;
-    margin-left: 40px;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: flex-start;
+.fieldmenu-dragbutton {
     align-items: center;
-    position: relative;
-    text-decoration: none;
-    color: $fa-color-black;
     background-color: transparent;
-    text-transform: capitalize;
-    overflow: hidden;
+    border: 0;
+    border-radius: 20px;
+    color: $fa-color-black;
     cursor: move;
-  }
-
-.btn-effect {
+    display: flex;
+    height: 50px;
+    justify-content: flex-start;
+    margin-bottom: 10px;
+    margin-left: 40px;
+    overflow: hidden;
+    padding-left: 20px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    text-transform: capitalize;
     transition: all 0.2s linear 0s;
-
+    width: 240px;
+    
     &:before {
+      
+      align-items: center;
+      border-radius: 50% 0 0 50%;   
       content: url("../../../../../../assets/Icon_Arrow.svg");
       display: flex;
-      align-items: center;
+      height: 100%;
       justify-content: center;
       position: absolute;
-      top: 0;
       right: 50px;
-      width: 50px;
-      height: 100%;
-      border-radius: 50% 0 0 50%;
-      transform: scale(0, 1);
-      transition: all 0.3s linear 0s;
-      transform-origin: right center;
       text-align: center;
+      top: 0;
+      transform: scale(0, 1);
+      transform-origin: right center;
+      transition: all 0.3s linear 0s;
       transition: all 0.2s linear 0.1s;
+      width: 50px;
     }
 
     &:hover {
-      text-indent: 0px;
       background-color: $fa-color-blue-dark;
       color: $fa-color-white-primary;
       fill: $fa-color-white-primary;
+      text-indent: 0px;
 
       &:before {
-        transform: scale(0.8, 1);
         right: 0;
         text-indent: 0px;
+        transform: scale(0.8, 1);
       }
+    }
+
+    &__title {
+      color: $fa-color-white-primary;
+      font-size: 1.125rem;
+      max-width: 67rem;
+      padding-left: 20px;
     }
   }
