--- a/packages/forms-web/src/pages/design-form/components/fields-menu/components/form-title/form-title.scss
+++ b/packages/forms-web/src/pages/design-form/components/fields-menu/components/form-title/form-title.scss
@@ -1,17 +1,20 @@
 @import '../../../../../../index';
 
 .form-title {
-    color: $fa-color-white-primary;
-    text-align: center;
-    display: flex;
-    padding-left: 20px;
-    justify-content: space-between;
     align-items: center;
-    left: 0;
+    background-color: $fa-color-gray-lighter;
+    color: $fa-color-white-primary;
+    display: flex;
+    font-size: 15px;  
+    justify-content: space-between;
+    left: 0;   
+    padding-left: 30px;
+    padding-right: 20px;
     position: relative;
+    text-align: center;
 
     &__icon {
-        width: 20px;
         padding-right: 10px;
+        width: 20px;
     }
 }
