Component form-section design

--- a/packages/forms-web/src/index.scss
+++ b/packages/forms-web/src/index.scss
@@ -10,14 +10,14 @@ $ml-color-white-primary: #fff;
 
 // definidos para Forms App
 $fa-color-cyan-primary: #0dd4c4;
-$fa-color-blue-dark: #38304D;
+$fa-color-blue-dark: #392c58;
 $fa-color-gray-light: #615E67;
 $fa-color-gray-lighter: #9b9292c1;
 $fa-color-white-primary: #fff;
 $fa-color-green-dark: #175127;
 $fa-color-orange-dark: #c7720e;
 $fa-color-red-dark: #551221;
-$fa-color-black: #282828;
+$fa-color-black: #313131;
 
 body {
   background-color: $ml-color-gray-Lighter;
