--- a/packages/forms-web/src/pages/design-form/components/slide-menu/components/drag-input/drag-input.scss
+++ b/packages/forms-web/src/pages/design-form/components/slide-menu/components/drag-input/drag-input.scss
@@ -1,6 +1,6 @@
 @import '../../../../../../index';
 
-.fieldmenu-dragbutton {
+.drag-input {
     align-items: center;
     background-color: transparent;
     border: 0;
@@ -25,7 +25,7 @@
       
       align-items: center;
       border-radius: 50% 0 0 50%;   
-      content: url("../../../../../../assets/Icon_Arrow.svg");
+      content: url("../icons/icon-arrow.svg");
       display: flex;
       height: 100%;
       justify-content: center;
