Feature drag and drop

--- a/packages/forms-web/src/index.scss
+++ b/packages/forms-web/src/index.scss
@@ -10,7 +10,8 @@ $ml-color-white-primary: #fff;
 
 // definidos para Forms App
 $fa-color-cyan-primary: #0dd4c4;
-$fa-color-blue-dark: #392c58;
+$fa-color-blue-dark: #201A30;
+$fa-color-blue-light: #31264e;
 $fa-color-gray-light: #615E67;
 $fa-color-gray-lighter: #9b9292c1;
 $fa-color-white-primary: #fff;
