--- a/packages/forms-web/src/pages/design-form/components/build-form/components/form-section/form-section.scss
+++ b/packages/forms-web/src/pages/design-form/components/build-form/components/form-section/form-section.scss
@@ -1,7 +1,7 @@
 @import '../../../../../../index';
 
 .form-section {
-    background-color: $fa-color-black;
+    background-color: $fa-color-blue-dark;
     border-radius: 20px;
     height: 400px; // aproximadamente
     margin-left: 70px;
