--- a/packages/forms-web/src/pages/design-form/components/slide-menu/components/drag-input/drag-input.scss
+++ b/packages/forms-web/src/pages/design-form/components/slide-menu/components/drag-input/drag-input.scss
@@ -41,7 +41,7 @@
     }
 
     &:hover {
-      background-color: $fa-color-blue-dark;
+      background-color: $fa-color-blue-light;
       color: $fa-color-white-primary;
       fill: $fa-color-white-primary;
       text-indent: 0px;
