--- a/packages/forms-web/src/pages/design-form/components/build-form/components/form-drop-area/form-drop-area.scss
+++ b/packages/forms-web/src/pages/design-form/components/build-form/components/form-drop-area/form-drop-area.scss
@@ -1,7 +1,7 @@
 @import '../../../../../../index';
 
 .drop-area {
-    background-color: aquamarine;
+    background-color: $fa-color-blue-light;
     color: $fa-color-white-primary;
     height: 70%;
     margin: 30px;
