Form design, add inputs

--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/drop-area.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/drop-area.scss
@@ -1,7 +1,7 @@
 @import '../../../../../../index';
 
 .drop-area {
-    background-color: $fa-color-blue-light;
+    background-color: $fa-color-gray-light;
     color: $fa-color-white-primary;
     height: 70%;
     margin: 30px;
