--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/text-input/styles/text-input.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/text-input/styles/text-input.scss
@@ -2,24 +2,16 @@
 
 .text-input {
     background-color: $fa-color-blue-light;
-    border: 0;
+    border: none;
     border-radius: 10px;
+    box-shadow: none; 
     color: $fa-color-white-primary;
-    font-size: 15px;
-    margin-top: 10px;
+    font-size: 14px;
+    font-style: italic;
+    height: 25px;
+    margin-bottom: 20px;
     outline: none;
     padding: 7px;
     padding-left: 12px;
-
-    &::placeholder {
-        color: $fa-color-white-primary;
-    }
-
-    &:focus {
-        outline: none;
-    }
-}
-
-.line-input {
-    padding: 0.375rem 0.75rem;
+    width: 410px;
 }
