--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/radio/styles/radio.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/radio/styles/radio.scss
@@ -1,24 +1,65 @@
 @import '../../../../../../../../index';
 
+.radio-group {
+    align-items: center;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
 .radio {
     accent-color:  $fa-color-cyan-primary;
     cursor: pointer;
     height: 20px;
-    margin: 0.5rem;
-    margin-right: 15px;
     transition: all 250ms ease;
     width: 20px;
+}
 
-    &:focus {
-        background-color: $fa-color-blue-light;
+.label {
+    cursor: pointer;
+    display: flex;
+    gap: 10px;  
+    justify-content: center;
+}
+
+.input-line {
+    position: relative;
+}
+
+.input-text {
+    background-color: $fa-color-blue-dark;
+    border: none;
+    border-bottom: 1px solid $fa-color-gray-lighter;
+    border-radius: 0;
+    box-shadow: none; 
+    color: $fa-color-white-primary;
+    font-size: 15px;
+    outline: none;
+    padding: 7px;
+    padding-left: 12px;
+    width: 350px;
+
+    &--add {
+        font-style: italic;
     }
 
-    &:checked {
-        background-color: blue;
+    &:focus {
+        border-bottom: 1px solid $fa-color-blue-dark;
+    }
+
+    &:focus + .line {
+        width: 100%;
     }
 }
 
-.radio-label {
-    color: $fa-color-white-primary;
-    display: inline-block;
+.line {
+    background: $fa-color-cyan-primary;
+    bottom: 0;
+    height: 1px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    transition: 0.3s all ease;
+    width: 0;
 }
