--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/drop-area.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/drop-area.scss
@@ -2,6 +2,12 @@
 
 .drop-area {
     color: $fa-color-white-primary;
+    display: flex;
     height: 70%;
+    justify-content: center;
     margin: 30px;
+
+    &__container {
+        width: 450px;
+    }
 }
