--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/form-area.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/form-area.scss
@@ -13,10 +13,11 @@
     &__form-section {
         background-color: $fa-color-blue-dark;
         border-radius: 20px;
-        height: 400px;
+        height: 450px;
         margin-left: 70px;
         margin-right: 70px;
         margin-top: 50px;
+        min-height: 400px;
         text-align: center;
         width: 100%;
     }
