--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/section-header.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/section-header.scss
@@ -1,6 +1,6 @@
 @import '../../../../../../index';
 
-.header {
+.section-header {
     border-bottom-color: $fa-color-blue-light;
     border-bottom-style: solid;
     border-bottom-width: 0.1em;
