--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/form-area.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/form-area.scss
@@ -6,18 +6,15 @@
     border-left-style: solid;
     border-left-width: 0.1em;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     text-align: right;
     width: 100%;
+    padding: 70px;
 
     &__form-section {
         background-color: $fa-color-blue-dark;
         border-radius: 20px;
-        height: 450px;
-        margin-left: 70px;
-        margin-right: 70px;
-        margin-top: 50px;
-        min-height: 400px;
+        min-height: auto;
         text-align: center;
         width: 100%;
     }
