--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/radio/styles/radio.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/radio/styles/radio.scss
@@ -20,46 +20,50 @@
         display: flex;
         gap: 10px;
         justify-content: center;
-    }
 
-    &__input-line {
-        position: relative;
-    }
-
-    &__input-text {
-        background-color: $fa-color-blue-dark;
-        border: none;
-        border-bottom: 1px solid $fa-color-gray-lighter;
-        border-radius: 0;
-        box-shadow: none;
-        color: $fa-color-white-primary;
-        font-size: 15px;
-        outline: none;
-        padding: 7px;
-        padding-left: 12px;
-        width: 350px;
-
-        &--add {
-            font-style: italic;
+        &__input-line {
+            position: relative;
         }
-
-        &:focus {
-            border-bottom: 1px solid $fa-color-blue-dark;
+    
+        &__line {
+            background: $fa-color-cyan-primary;
+            bottom: 0;
+            height: 1px;
+            left: 50%;
+            position: absolute;
+            transform: translateX(-50%);
+            transition: 0.3s all ease;
+            width: 0;
         }
-
-        &:focus + .line {
-            width: 100%;
+    
+        &__input-text {
+            background-color: $fa-color-blue-dark;
+            border: none;
+            border-bottom: 1px solid $fa-color-gray-lighter;
+            border-radius: 0;
+            box-shadow: none;
+            color: $fa-color-white-primary;
+            font-size: 15px;
+            outline: none;
+            padding: 7px;
+            padding-left: 12px;
+            width: 350px;
+    
+            &--add {
+                font-style: italic;
+            }
+    
+            &:focus {
+                border-bottom: 1px solid $fa-color-blue-dark;
+            }
+    
+            &:focus + .radio-group__label__line {
+                width: 100%;
+            }
         }
     }
-
-    &__line {
-        background: $fa-color-cyan-primary;
-        bottom: 0;
-        height: 1px;
-        left: 50%;
-        position: absolute;
-        transform: translateX(-50%);
-        transition: 0.3s all ease;
-        width: 0;
+    
+    &__icon {
+        cursor: pointer;
     }
 }
