--- a/packages/forms-web/src/pages/user-forms/ui/styles/slide-form.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/slide-form.scss
@@ -1,15 +1,11 @@
 .slide-form{
 
   &__content {
+    display: flex;
     min-width: 160px;
     height: 78px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background: #38304D;
     border-radius: 15px;
-    padding-left: 10px;
-    padding-right: 10px;
     margin-bottom: 2px;
     margin-top: 30px;
   }
@@ -28,55 +24,46 @@
       line-height: 15px;
       text-align: center;
       color: #FFFFFF;
+      font-weight: normal;
     }
   }
 
   &__slide-button {
-    display: inline-block;
-  }
-
-  &__button-content {
     display: flex;
-    height: 59px;
-    background-color: #38304D;
+    width: 100%;
     min-width: 160px;
+    height: 78px;
     border-radius: 15px;
-    opacity: 0.5;
-    padding-left: 10px;
-    margin-bottom: 2px;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding-right: 12px;
-
-    a {
-      display: block;
-      padding: 15px;
-      font-size: 25px;
-      text-decoration: none;
-      color: white;
-    }
   }
 
   &__arrow-button {
+    display: flex;
+    justify-content: space-between;
     padding: 10px;
+    align-items: center;
     font-size: 14px;
     border: none;
     background-color: #38304D;
     cursor: pointer;
     color: white;
+    width: 100%;
+    height: 78px;
+    border-radius: 15px;
   }
 
   &__arrow-up {
+    margin-top: 75px;
+    margin-left: 20px;
     rotate: 180deg;
+    margin-right: 11px;
   }
 
-  &__button-option {
-    padding: 10px;
-    font-size: 14px;
-    border: none;
-    background-color: #38304D;
-    cursor: pointer;
-    color: white;
+  &__arrow-down {
+    margin-top: 40px;
+    margin-right: 11px;
+  }
+
+  &__arrow-up-right {
+    margin-right: 10px;
   }
 }
