added user-forms styles

--- a/packages/forms-web/src/pages/user-forms/ui/styles/return-button.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/return-button.scss
@@ -6,6 +6,7 @@
     height: 50px;
     background: #0DD4C4;
     border-radius: 22px;
+    margin-left: 50px;
   }
 
   &__return-button-container {
