--- a/packages/forms-web/src/pages/user-forms/ui/styles/slide-form.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/slide-form.scss
@@ -19,6 +19,7 @@
   &__name {
     display: flex;
     align-items: center;
+    margin-top: 10px;
     b {
       font-size: 29px;
       line-height: 15px;
