--- a/packages/forms-web/src/pages/user-forms/ui/styles/form-title.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/form-title.scss
@@ -14,9 +14,10 @@
     b {
       width: 290px;
       height: 50px;
-      font-size: 38px;
+      font-size: 37px;
       line-height: 44px;
       color: white;
+      margin-top: 13px;
     }
   }
 }
