--- a/packages/forms-web/src/pages/user-forms/ui/styles/user-forms.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/user-forms.scss
@@ -1,8 +1,9 @@
 .user-forms-container {
     width: 100%;
     min-width: 2100px;
-    height: 100%;
-    min-height: 976px;
+    height: auto;
+    min-height: 1040px;
+    padding-bottom: 30px;
     background: #615E67;
 
     &__forms-container {
@@ -17,6 +18,7 @@
         background: #140B2A;
         border-radius: 15px;
         margin-bottom: 20px;
+        margin-left: 50px;
     }
 
 }
