:lipstick: add use case views

--- a/packages/forms-web/src/pages/user-forms/ui/styles/status-use-case.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/status-use-case.scss
@@ -3,5 +3,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-family: 'Poppins', serif;
+  }
+  &__green-icon {
+    fill: green;
+  }
+  &__yellow-icon{
+    margin-left: 35px;
+    fill: yellow;
+  }
+  &__red-icon{
+    margin-left: 15px;
+    fill: red;
   }
 }
