--- a/packages/forms-web/src/pages/user-forms/ui/styles/form-title.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/form-title.scss
@@ -5,10 +5,9 @@
     width: 100%;
     min-width: 160px;
     align-items: center;
-    height: 51px;
     background: #201A30;
     border-radius: 15px;
-    padding-left: 8px;
+    padding: 15px;
     margin-bottom: 50px;
 
     b {
@@ -17,7 +16,6 @@
       font-size: 37px;
       line-height: 44px;
       color: white;
-      margin-top: 13px;
       margin-left: 30px;
     }
   }
