--- a/packages/forms-web/src/pages/user-forms/ui/styles/form-use-case.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/form-use-case.scss
@@ -36,4 +36,9 @@
     width: 100%;
     align-items: center;
   }
+
+  &__name-status-container {
+    display: flex;
+    flex-direction: row;
+  }
 }
