--- a/packages/forms-web/src/pages/user-forms/ui/styles/head-user-form.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/head-user-form.scss
@@ -1,9 +1,8 @@
 .head-user-form{
   display: flex;
   width: 100%;
-  min-width: 2100px;
   height: 51px;
   align-items: center;
-  background: #615E67;
+  background: #a29fa6;
   margin-bottom: 50px;
 }
