--- a/packages/forms-web/src/pages/user-forms/ui/styles/form-use-case.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/form-use-case.scss
@@ -1,9 +1,8 @@
-.slide-form-option {
+.form-use-case {
 
   &__button-content {
     display: flex;
     height: 59px;
-    background-color: #38304D;
     border-radius: 15px;
     opacity: 0.5;
     margin-bottom: 2px;
