--- a/packages/forms-web/src/pages/user-forms/ui/styles/form.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/form.scss
@@ -42,7 +42,6 @@
     cursor: pointer;
     color: white;
     width: 100%;
-    height: 78px;
     border-radius: 15px;
   }
 
@@ -58,4 +57,22 @@
   &__arrow-up-right {
     margin-right: 20px;
   }
+
+  @media screen and (max-width: 455px) {
+    &__name b {
+      font-size: 20px;
+      margin-left: 5px;
+    }
+
+    &__arrow-button {
+      padding: 5px;
+    }
+  }
+
+  @media screen and (max-width: 355px) {
+    &__name b {
+      font-size: 15px;
+    }
+  }
+
 }
