--- a/packages/forms-web/src/pages/user-forms/ui/styles/status-use-case.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/status-use-case.scss
@@ -1,5 +1,14 @@
 .status-use-case {
 
+  &__status{
+    display: block;
+    padding: 15px;
+    font-size: 25px;
+    text-decoration: none;
+    color: white;
+    font-weight: normal;
+  }
+
   &__container {
     display: flex;
     flex-direction: row;
@@ -8,11 +17,28 @@
   }
   &__green-icon {
     fill: green;
+
   }
   &__yellow-icon{
     fill: yellow;
   }
   &__red-icon{
     fill: red;
+  }
+
+  @media screen and (max-width: 800px) {
+    &__container {
+      margin-left: 0;
+    }
+
+    &__status {
+      font-size: 20px;
+    }
+  }
+
+  @media screen and (max-width: 300px) {
+    &__status {
+      font-size: 15px;
+    }
   }
 }
