--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/form-area.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/form-area.scss
@@ -7,9 +7,19 @@
     border-left-width: 0.1em;
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: right;
     width: 100%;
-    padding: 70px;
+    min-height: 95vh;
+    padding: 24px;
+
+    &__section-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        max-width: 1200px;
+    }
 
     &__form-section {
         background-color: $fa-color-blue-dark;
