se añaden estilos a inputs

--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/text-area/styles/text-area.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/text-area/styles/text-area.scss
@@ -15,6 +15,9 @@
     min-width: 430px;
     outline: none;
     padding: 7px;
-    padding-left: 12px;
     width: 430px;
+
+    &::placeholder {
+        color: $fa-color-gray-light;
+    }
 }
