--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/label/styles/label.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/label/styles/label.scss
@@ -38,5 +38,9 @@
         &:focus + .label__line {
             width: 100%;
         }
+
+        &::placeholder {
+            color: $fa-color-gray-lighter;
+        }
     }
 }
