--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/time-input/styles/time-input.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/time-input/styles/time-input.scss
@@ -20,4 +20,9 @@
         font-size: 14px;
         font-style: italic;
     }
+
+    svg {
+        color: $fa-color-gray-light;
+        opacity: 0.5;
+    }
 }
