--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/section-header.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/section-header.scss
@@ -8,8 +8,7 @@
     display: flex;
     height: 70px;
     justify-content: flex-start;
-    padding-left: 50px;
-    padding-right: 40px;
+    padding: 0 16px;
 
     &__select-user {
         background-color: $fa-color-blue-light;
@@ -17,10 +16,9 @@
         border-radius: 10px;
         color: $fa-color-white-primary;
         font-size: 15px;
-        margin-bottom: 18px;
-        margin-top: 18px;
-        padding: 7px;
-        width: 100px;
+        margin: 16px;
+        padding: 0 16px;
+        width: 200px;
 
         &:focus {
             outline: none;
@@ -33,14 +31,13 @@
         border-radius: 10px;
         color: $fa-color-white-primary;
         font-size: 20px;
-        margin-bottom: 10px;
-        margin-left: 90px;
-        margin-top: 10px;
+        margin: 16px;
         outline: none;
-        padding: 7px;
+        padding: 0 16px;
+        width: 50%;
 
         &::placeholder {
-            color: $fa-color-white-primary;
+            color: $fa-color-gray-lighter;
         }
 
         &:focus {
