--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/date-input/styles/date-input.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/date-input/styles/date-input.scss
@@ -9,7 +9,7 @@
     display: flex;
     height: 25px;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     outline: none;
     padding: 7px 7px 7px 12px;
     width: 430px;
@@ -22,7 +22,7 @@
     }
 
     svg {
-        color: $fa-color-gray-light;
+        fill: transparent;
         opacity: 0.5;
     }
 }
