--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/text-input/styles/text-input.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/components/inputs/text-input/styles/text-input.scss
@@ -1,15 +1,16 @@
 @import '../../../../../../../../../index';
 
 .text-input {
-    display: flex;
     background-color: $fa-color-blue-light;
     border: none;
     border-radius: 10px;
     box-shadow: none;
     color: $fa-color-white-primary;
+    display: flex;
     font-size: 14px;
     font-style: italic;
     height: 25px;
+    margin-bottom: 10px;
     outline: none;
     padding: 7px;
     width: 430px;
