--- a/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/section-area.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/form-area/styles/section-area.scss
@@ -3,15 +3,23 @@
 .section-area {
     color: $fa-color-white-primary;
     display: flex;
-    min-height: 300px;
     flex-wrap: wrap;
     margin: 30px;
+    min-height: 300px;
 
     &__field-container {
-        width: 50%;
+        align-items: center;
         display: flex;
         flex-direction: column;
-        align-items: center;
         margin: 16px 0;
+        width: 50%;
+    }
+
+    &__icon {
+        fill: transparent;
+        
+        &:hover {
+            stroke: $fa-color-white-primary;
+        }
     }
 }
