--- a/packages/forms-web/src/pages/form-design/ui/containers/slide-menu/components/drag-input/styles/drag-input.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/slide-menu/components/drag-input/styles/drag-input.scss
@@ -5,7 +5,7 @@
     background-color: transparent;
     border: 0;
     border-radius: 20px;
-    color: $fa-color-black;
+    color: $fa-color-white-primary;
     cursor: move;
     display: flex;
     height: 50px;
@@ -41,15 +41,18 @@
 
     &:hover {
       background-color: $fa-color-blue-light;
-      color: $fa-color-white-primary;
-      fill: $fa-color-white-primary;
-      text-indent: 0px;
+      border: 0;
+      border-radius: 20px;
 
       &:before {
         right: 0;
         text-indent: 0px;
         transform: scale(0.8, 1);
       }
+    }
+
+    &:active {
+      border-radius: 0;
     }
 
     &__title {
@@ -59,7 +62,8 @@
       padding-left: 20px;
     }
 
-    svg {
-      color: $fa-color-white-primary;
+    &__icon {
+      fill: transparent;
     }
-  }
+}
+  
