--- a/packages/forms-web/src/pages/form-design/ui/containers/slide-menu/styles/form-title.scss
+++ b/packages/forms-web/src/pages/form-design/ui/containers/slide-menu/styles/form-title.scss
@@ -8,13 +8,21 @@
     font-size: 15px;
     justify-content: space-between;
     left: 0;
-    padding-left: 30px;
-    padding-right: 20px;
+    padding: 12px;
     position: relative;
     text-align: center;
 
-    &__icon {
-        padding-right: 10px;
-        width: 20px;
+    input {
+        height: 42px;
+        width: 100%;
+        padding: 0 16px;
+        border-radius: 4px;
+        background-color: $fa-color-white-primary ;
+        border: none;
+        border-bottom: 1px solid $fa-color-gray-lighter;
+        box-shadow: none;
+        color: $fa-color-blue-light;
+        font-size: 15px;
+        outline: none;
     }
 }
