se añade funcionalidad para guardar formularios

--- a/packages/forms-web/src/index.scss
+++ b/packages/forms-web/src/index.scss
@@ -10,6 +10,7 @@ $fa-color-green-dark: #175127;
 $fa-color-orange-dark: #c7720e;
 $fa-color-red-dark: #551221;
 $fa-color-black: #313131;
+$fa-color-green: #0DD4C4;
 
 body {
   background-color: $fa-color-gray-lighter;
