--- a/packages/forms-web/src/pages/header/styles/header.scss
+++ b/packages/forms-web/src/pages/header/styles/header.scss
@@ -5,10 +5,21 @@
   background-color: #615E67;
   z-index: 1;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   border-bottom: 1px solid #9b9292c1;
 
-  &__button {
+  &__menu {
+    margin: 16px;
+    a {
+      text-decoration: none;
+      color: #fff;
+      margin: 10px;
+      font-size: 16px;
+      font-weight: bold;
+    }
+  }
+
+  &__logout {
     position: relative;
     margin: 12px;
     display: flex;
@@ -30,7 +41,7 @@
     }
   }
 
-  &__button-title {
+  &__logout-title {
     font-size: 16px;
     color: black;
   }
