--- a/packages/forms-web/src/pages/form/ui/styles/form.scss
+++ b/packages/forms-web/src/pages/form/ui/styles/form.scss
@@ -1,4 +1,33 @@
 .form {
+  width: 100%;
+  height: auto;
+  min-height: 1040px;
+  padding-bottom: 30px;
+  background: #615E67;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__forms-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 80%;
+      height: auto;
+      min-height: 735px;
+      background: #140B2A;
+      margin-bottom: 20px;
+      border-radius: 15px;
+  }
+
+  &__return-container {
+      display: flex;
+      align-items: start;
+      width: 80%;
+  }
+}
+
+/*
   display: flex;
   flex-direction: column;
   border-radius: 15px;
@@ -82,5 +111,4 @@
     margin: 16px 0;
     width: 50%;
   }
-
-}
+*/
