:lipstick: actualizacion de inputs

--- a/packages/forms-web/src/pages/form/ui/styles/form.scss
+++ b/packages/forms-web/src/pages/form/ui/styles/form.scss
@@ -1,4 +1,4 @@
-.form {
+.form-container {
   width: 100%;
   height: auto;
   min-height: 1040px;
@@ -15,9 +15,6 @@
       width: 80%;
       height: auto;
       min-height: 735px;
-      background: #140B2A;
-      margin-bottom: 20px;
-      border-radius: 15px;
   }
 
   &__return-container {
@@ -26,89 +23,3 @@
       width: 80%;
   }
 }
-
-/*
-  display: flex;
-  flex-direction: column;
-  border-radius: 15px;
-  margin-bottom: 2px;
-  margin-top: 30px;
-
-  &__name-icon {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
-  &__name {
-    display: flex;
-    align-items: center;
-    b {
-      font-size: 29px;
-      line-height: 15px;
-      text-align: center;
-      color: #FFFFFF;
-      font-weight: normal;
-      margin-left: 20px;
-    }
-  }
-
-  &__slide-button {
-    display: flex;
-    width: 100%;
-    height: 78px;
-    border-radius: 15px;
-  }
-
-  &__arrow-button {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    align-items: center;
-    font-size: 14px;
-    border: none;
-    background-color: #38304D;
-    cursor: pointer;
-    color: white;
-    width: 100%;
-    border-radius: 15px;
-  }
-
-  &__arrow-up {
-    rotate: 180deg;
-    margin-right: 20px;
-  }
-
-  &__arrow-down {
-    margin-right: 20px;
-  }
-
-  &__arrow-up-right {
-    margin-right: 20px;
-  }
-
-  @media screen and (max-width: 455px) {
-    &__name b {
-      font-size: 20px;
-      margin-left: 5px;
-    }
-
-    &__arrow-button {
-      padding: 5px;
-    }
-  }
-
-  @media screen and (max-width: 355px) {
-    &__name b {
-      font-size: 15px;
-    }
-  }
-
-  &__field-container {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin: 16px 0;
-    width: 50%;
-  }
-*/
