--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/select/styles/select.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/select/styles/select.scss
@@ -1,11 +1,19 @@
 @import '../../../../../../../../../index';
 
 .select-group {
-    align-items: center;
+    background-color: $fa-color-blue-light;
+    border: none;
+    border-radius: 10px;
+    box-shadow: none;
+    color: $fa-color-white-primary;
     display: flex;
-    gap: 20px;
+    font-size: 14px;
+    font-style: italic;
+    height: 39px;
     margin-bottom: 10px;
-    text-align: left;
+    outline: none;
+    padding: 7px;
+    width: 430px;
 
     &__options-container {
         width: 430px;
