--- a/packages/forms-web/src/pages/form/ui/containers/form-area/styles/form-area.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/styles/form-area.scss
@@ -1,10 +1,10 @@
 @import '../../../../../../index';
 
-.form-area {
+.form-area-container {
     background-color: $fa-color-gray-light;
-    border-left-color: $fa-color-gray-lighter;
-    border-left-style: solid;
-    border-left-width: 0.1em;
+    //border-left-color: $fa-color-gray-lighter;
+    //border-left-style: solid;
+    //border-left-width: 0.1em;
     display: flex;
     flex-direction: column;
     align-items: center;
