--- a/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-header.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-header.scss
@@ -7,7 +7,7 @@
     color: $fa-color-white-primary;
     display: flex;
     height: 70px;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 0 16px;
 
     &__section-name {
@@ -19,7 +19,9 @@
         margin: 16px;
         outline: none;
         padding: 0 16px;
-        width: 50%;
+        width: 80%;
+        display: flex;
+        align-items: center;
 
         &::placeholder {
             color: $fa-color-gray-lighter;
