--- a/packages/forms-web/src/pages/header/styles/header.scss
+++ b/packages/forms-web/src/pages/header/styles/header.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #9b9292c1;
+  top:0;
 
   &__menu {
     margin: 16px;
