--- a/packages/forms-web/src/pages/user-forms/ui/styles/user-forms.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/user-forms.scss
@@ -22,7 +22,7 @@
 
     &__return-container {
         display: flex;
-        align-items: start;
+        align-items: flex-start;
         width: 80%;
     }
 }
