:label: update TextArea input with redux

--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/text-area/styles/text-area.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/text-area/styles/text-area.scss
@@ -1,23 +1,26 @@
 @import '../../../../../../../../../index';
 
-.text-area {
+.form-text-area {
     background-color: $fa-color-blue-light;
     border: none;
     border-radius: 10px;
     box-shadow: none;
     color: $fa-color-white-primary;
-    font-size: 14px;
-    font-style: italic;
+    font-size: 15px;
     height: 35px;
     margin-bottom: 10px;
     max-width: 430px;
     min-height: 20px;
     min-width: 430px;
     outline: none;
-    padding: 7px;
+    padding: 7px 7px 7px 12px;
     width: 430px;
 
     &::placeholder {
         color: $fa-color-gray-light;
+    }
+
+    &:focus {
+        border-bottom: 1px solid $fa-color-cyan-primary;
     }
 }
