--- a/packages/forms-web/src/index.scss
+++ b/packages/forms-web/src/index.scss
@@ -19,6 +19,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   min-width: 1400px;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 code {
