--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/text-input/styles/text-input.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/text-input/styles/text-input.scss
@@ -1,21 +1,46 @@
 @import '../../../../../../../../../index';
 
-.text-input {
-    background-color: $fa-color-blue-light;
-    border: none;
-    border-radius: 10px;
-    box-shadow: none;
-    color: $fa-color-white-primary;
-    display: flex;
-    font-size: 14px;
-    font-style: italic;
-    height: 25px;
+.form-text-input {
+    position: relative;
+    width: 100%;
+    margin: 0 10px;
     margin-bottom: 10px;
-    outline: none;
-    padding: 7px;
-    width: 430px;
 
-    &::placeholder {
-        color: $fa-color-gray-light;
+    &__line {
+        background: $fa-color-cyan-primary;
+        bottom: 0;
+        height: 1px;
+        left: 50%;
+        position: absolute;
+        transform: translateX(-50%);
+        transition: 0.3s all ease;
+        width: 0;
+        max-width: 430px;
+    }
+
+    &__text {
+        background-color: $fa-color-blue-light;
+        border: none;
+        border-bottom: 1px solid $fa-color-gray-lighter;
+        border-radius: 0;
+        box-shadow: none;
+        color: $fa-color-white-primary;
+        font-size: 15px;
+        outline: none;
+        padding: 7px 7px 7px 12px;
+        width: 100%;
+        max-width: 430px;
+
+        &:focus {
+            border-bottom: 1px solid $fa-color-blue-light;
+        }
+
+        &:focus + .form-text-input__line {
+            width: 100%;
+        }
+
+        &::placeholder {
+            color: $fa-color-gray-lighter;
+        }
     }
 }
