--- a/packages/forms-web/src/pages/form/ui/containers/form-area/styles/form-area.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/styles/form-area.scss
@@ -1,35 +1,12 @@
 @import '../../../../../../index';
 
-.form-area-container {
-    background-color: $fa-color-gray-light;
-    //border-left-color: $fa-color-gray-lighter;
-    //border-left-style: solid;
-    //border-left-width: 0.1em;
+.form-section-container {
+    background-color: $fa-color-blue-dark;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: right;
-    width: 100%;
-    min-height: 95vh;
+    text-align: center;
+    width: 90%;
     padding: 24px;
-
-    &__section-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        max-width: 1200px;
-    }
-
-    &__form-section {
-        background-color: $fa-color-blue-dark;
-        border-radius: 20px;
-        min-height: auto;
-        text-align: center;
-        width: 100%;
-    }
-
-    &__add-button {
-        cursor: pointer;
-    }
+    border-radius: 20px;
 }
