--- a/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-area.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-area.scss
@@ -1,25 +1,18 @@
 @import '../../../../../../index';
 
-.section-area {
+.form-section-area {
     color: $fa-color-white-primary;
     display: flex;
     flex-wrap: wrap;
-    margin: 30px;
-    min-height: 300px;
+    justify-content: space-around;
+    width: 100%;
 
     &__field-container {
         align-items: center;
         display: flex;
         flex-direction: column;
         margin: 16px 0;
-        width: 50%;
-    }
-
-    &__icon {
-        fill: transparent;
-        
-        &:hover {
-            stroke: $fa-color-white-primary;
-        }
+        width: 100%;
+        max-width: 560px;
     }
 }
