--- a/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-header.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/styles/section-header.scss
@@ -1,14 +1,13 @@
 @import '../../../../../../index';
 
-.section-header {
-    border-bottom-color: $fa-color-blue-light;
-    border-bottom-style: solid;
-    border-bottom-width: 0.1em;
+.form-section-header {
+    border-bottom: 0.1em solid $fa-color-blue-light;
     color: $fa-color-white-primary;
     display: flex;
-    height: 70px;
+    width: 100%;
+    height: 80px;
     justify-content: center;
-    padding: 0 16px;
+    margin-bottom: 24px;
 
     &__section-name {
         background-color: $fa-color-blue-light;
@@ -16,19 +15,11 @@
         border-radius: 10px;
         color: $fa-color-white-primary;
         font-size: 20px;
-        margin: 16px;
+        margin-bottom: 24px;
         outline: none;
         padding: 0 16px;
-        width: 80%;
+        width: 90%;
         display: flex;
         align-items: center;
-
-        &::placeholder {
-            color: $fa-color-gray-lighter;
-        }
-
-        &:focus {
-            outline: none;
-        }
     }
 }
