--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/email-input/styles/email-input.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/email-input/styles/email-input.scss
@@ -1,17 +1,24 @@
 @import '../../../../../../../../../index';
 
-.email-input {
+.form-email-input {
     background-color: $fa-color-blue-light;
     border: none;
     border-radius: 10px;
     box-shadow: none;
     color: $fa-color-white-primary;
     display: flex;
-    font-size: 14px;
-    font-style: italic;
-    height: 25px;
+    font-size: 15px;
     margin-bottom: 10px;
     outline: none;
     padding: 7px 7px 7px 12px;
     width: 430px;
+    height: 32px;
+
+    &::placeholder {
+        color: $fa-color-gray-light;
+    }
+
+    &:focus {
+        border-bottom: 1px solid $fa-color-cyan-primary;
+    }
 }
