:label: add button in footer

--- a/packages/forms-web/src/pages/form/ui/containers/footer-buttons/styles/footer-buttons.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/footer-buttons/styles/footer-buttons.scss
@@ -1,6 +1,6 @@
 @import '../../../../../../index';
 
-.footer-buttons {
+.form-use-case-footer-buttons {
     position: fixed;
     bottom: 12px;
     right: 12px;
