--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/text-input/styles/text-input.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/text-input/styles/text-input.scss
@@ -1,21 +1,19 @@
 @import '../../../../../../../../../index';
 
-.form-text-input {
-    position: relative;
+.form-use-case-text-input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    margin: 0 10px;
     margin-bottom: 10px;
 
     &__line {
         background: $fa-color-cyan-primary;
-        bottom: 0;
         height: 1px;
-        left: 50%;
-        position: absolute;
-        transform: translateX(-50%);
+        transform: translateX(0%);
         transition: 0.3s all ease;
         width: 0;
-        max-width: 430px;
+        max-width: 450px;
     }
 
     &__text {
@@ -29,13 +27,14 @@
         outline: none;
         padding: 7px 7px 7px 12px;
         width: 100%;
-        max-width: 430px;
+        height:35px;
+        max-width: 450px;
 
         &:focus {
             border-bottom: 1px solid $fa-color-blue-light;
         }
 
-        &:focus + .form-text-input__line {
+        &:focus + .form-use-case-text-input__line {
             width: 100%;
         }
 
