--- a/packages/forms-web/src/pages/user-forms/ui/styles/status-use-case.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/status-use-case.scss
@@ -32,13 +32,7 @@
     }
 
     &__status {
-      font-size: 20px;
-    }
-  }
-
-  @media screen and (max-width: 300px) {
-    &__status {
-      font-size: 15px;
+      display: none;
     }
   }
 }
