--- a/packages/forms-web/src/pages/header/styles/header.scss
+++ b/packages/forms-web/src/pages/header/styles/header.scss
@@ -11,6 +11,7 @@
 
   &__menu {
     margin: 16px;
+    display: flex;
     a {
       text-decoration: none;
       color: #fff;
@@ -18,6 +19,7 @@
       padding: 0 24px;
       font-size: 18px;
       font-weight: bold;
+      text-align: center;
 
       &:nth-child(1) {
         border-left: none;
@@ -50,5 +52,15 @@
   &__logout-title {
     font-size: 16px;
     color: black;
+  }
+
+  @media screen and (max-width: 440px) {
+    &__logout {
+      width: 50px;
+    }
+
+    &__logout-title {
+      display: none;
+    }
   }
 }
