--- a/packages/forms-web/src/pages/user-forms/ui/styles/form-title.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/form-title.scss
@@ -1,36 +1,27 @@
-.form-title {
+.user-forms-title {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  background: #201A30;
+  border-radius: 15px;
+  margin: 24px 0;
+  padding: 15px;
 
-  &__container {
-    width: 90%;
-  }
-
-  &__title {
-    display: flex;
-    align-items: center;
-    background: #201A30;
-    border-radius: 15px;
-    margin-bottom: 50px;
-    margin-top: 20px;
-    padding: 15px;
-
-    b {
-      width: 290px;
-      height: 50px;
-      font-size: 37px;
-      line-height: 44px;
-      color: white;
-      margin-left: 12px;
-    }
+  b {
+    width: 290px;
+    height: 50px;
+    font-size: 37px;
+    line-height: 44px;
+    color: white;
+    margin-left: 12px;
   }
 
   @media screen and (max-width: 455px) {
 
-    &__title {
-      padding: 5px;
-      b {
-        font-size: 25px;
-        margin-left: 5px;
-      }
+    padding: 5px;
+    b {
+      font-size: 25px;
+      margin-left: 5px;
     }
 
     &__icon-container {
@@ -39,7 +30,7 @@
   }
 
   @media screen and (max-width: 355px) {
-    &__title b {
+    b {
       font-size: 20px;
     }
   }
