--- a/packages/forms-web/src/pages/user-forms/ui/styles/user-forms.scss
+++ b/packages/forms-web/src/pages/user-forms/ui/styles/user-forms.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 60px;
 
     &__forms-container {
         display: flex;
@@ -16,7 +17,7 @@
         height: auto;
         min-height: 735px;
         background: #140B2A;
-        margin-bottom: 20px;
+        margin: 24px 8px;
         border-radius: 15px;
     }
 
@@ -25,7 +26,10 @@
         align-items: flex-start;
         width: 80%;
     }
+
+    @media screen and (max-width: 455px) {
+        &__forms-container {
+            width: 95%;
+        }
+    }
 }
-
-
-
