fixed form design styles

--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/label/styles/label.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/label/styles/label.scss
@@ -3,7 +3,7 @@
 .form-use-case-label {
     display: flex;
     margin-bottom: 10px;
-    padding-left: 20px;
     width: 100%;
     max-width: 450px;
+    font-weight: bold;
 }
