--- a/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/select/styles/select.scss
+++ b/packages/forms-web/src/pages/form/ui/containers/form-area/components/inputs/select/styles/select.scss
@@ -12,7 +12,7 @@
     margin-bottom: 10px;
     outline: none;
     padding: 7px 7px 7px 12px;
-    width: 430px;
+    width: 100%;
 
     &::placeholder {
         color: $fa-color-gray-light;
